Terminal Saved Output
Last login: Tue Oct 25 04:04:13 on console
PAULLEWI-M-21F9:~ paullewi$ cd ~/code
-bash: cd: /Users/paullewi/code: No such file or directory
PAULLEWI-M-21F9:~ paullewi$ ls
Applications	GNS3		MyJabberFiles	Virtual
Desktop		Library		Pictures	coding
Documents	Movies		Public		coding copy
Downloads	Music		PycharmProjects	coding copy.zip
PAULLEWI-M-21F9:~ paullewi$ cd coding
PAULLEWI-M-21F9:coding paullewi$ ls
csalert
PAULLEWI-M-21F9:coding paullewi$ cd csalert
PAULLEWI-M-21F9:csalert paullewi$ pythong appstart.py
-bash: pythong: command not found
PAULLEWI-M-21F9:csalert paullewi$ python appstart.py
Enter your Spark Token: 
Enter the Floor Manager's email: 
What is the department's customer capacity?

Traceback (most recent call last):
  File "appstart.py", line 5, in <module>
    import variables
  File "/Users/paullewi/coding/csalert/variables.py", line 9, in <module>
    threshold = input("What is the department's customer capacity?\n")
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
PAULLEWI-M-21F9:csalert paullewi$ ls
-X				include
CMXRequest.sh			lib
CMXResponse.txt			pip-selfcheck.json
Dockerfile			requirements.txt
README.md			sparkMember.py
appstart.py			sparkMember.pyc
bin				sparkMessage.py
drone				sparkMessage.pyc
drone_secrets.yml		sparkRoom.py
drone_secrets_sample.yml	sparkRoom.pyc
execute.py			variables.py
execute.pyc			variables.pyc
PAULLEWI-M-21F9:csalert paullewi$ cat requirements.txt
altgraph==0.10.2
bdist-mpkg==0.5.0
bonjour-py==0.3
macholib==1.5.1
matplotlib==1.3.1
modulegraph==0.10.4
numpy==1.8.0rc1
py2app==0.7.3
pyobjc-core==2.5.1
pyobjc-framework-Accounts==2.5.1
pyobjc-framework-AddressBook==2.5.1
pyobjc-framework-AppleScriptKit==2.5.1
pyobjc-framework-AppleScriptObjC==2.5.1
pyobjc-framework-Automator==2.5.1
pyobjc-framework-CFNetwork==2.5.1
pyobjc-framework-Cocoa==2.5.1
pyobjc-framework-Collaboration==2.5.1
pyobjc-framework-CoreData==2.5.1
pyobjc-framework-CoreLocation==2.5.1
pyobjc-framework-CoreText==2.5.1
pyobjc-framework-DictionaryServices==2.5.1
pyobjc-framework-EventKit==2.5.1
pyobjc-framework-ExceptionHandling==2.5.1
pyobjc-framework-FSEvents==2.5.1
pyobjc-framework-InputMethodKit==2.5.1
pyobjc-framework-InstallerPlugins==2.5.1
pyobjc-framework-InstantMessage==2.5.1
pyobjc-framework-LatentSemanticMapping==2.5.1
pyobjc-framework-LaunchServices==2.5.1
pyobjc-framework-Message==2.5.1
pyobjc-framework-OpenDirectory==2.5.1
pyobjc-framework-PreferencePanes==2.5.1
pyobjc-framework-PubSub==2.5.1
pyobjc-framework-QTKit==2.5.1
pyobjc-framework-Quartz==2.5.1
pyobjc-framework-ScreenSaver==2.5.1
pyobjc-framework-ScriptingBridge==2.5.1
pyobjc-framework-SearchKit==2.5.1
pyobjc-framework-ServiceManagement==2.5.1
pyobjc-framework-Social==2.5.1
pyobjc-framework-SyncServices==2.5.1
pyobjc-framework-SystemConfiguration==2.5.1
pyobjc-framework-WebKit==2.5.1
pyOpenSSL==0.13.1
pyparsing==2.0.1
python-dateutil==1.5
pytz==2013.7
requests==2.11.1
scipy==0.13.0b1
six==1.4.1
virtualenv==15.0.3
xattr==0.6.4
zope.interface==4.1.1
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ paullewi
-bash: paullewi: command not found
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ 
PAULLEWI-M-21F9:csalert paullewi$ python appstart.py
Enter your Spark Token: YzEzNjk1ODYtMjcxOC00YzE0LWJmNWEtZTY0ZTJlYWE2ZWU4ZTA1YWY2ZDQtMjA4
Enter the Floor Manager's email: paullewi@cisco.com
What is the department's customer capacity?
55
There are currently 72 customers in this department. We are sending an alert to the Manager.
__________________________________________________________________________________________________
^[

__________________________________________________________________________________________________

